update html templatee
add l-body class

--- a/src/html/__user-template.html
+++ b/src/html/__user-template.html
@@ -7,7 +7,7 @@
   <title>Template</title>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="l-body">
 
 </body>
 </html>
