--- a/src/html/__user-template.html
+++ b/src/html/__user-template.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Template</title>
   <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/technical-styles.css">
 </head>
 <body class="l-body">
 
