add c-tab component

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./css/technical-styles.css">
 </head>
 <body>
+  <ol>
+    <li><a href="./c-tab.html">c-tab</a></li>
+  </ol>
 
 </body>
 </html>
