add c-input component

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <ol>
+    <li><a href="./c-input.html">c-input</a></li>
     <li><a href="./c-tab.html">c-tab</a></li>
   </ol>
 
