add html content to c-popup

--- a/src/html/c-popup.html
+++ b/src/html/c-popup.html
@@ -35,6 +35,85 @@
         <div class="c-popup__inner">
           <p>Morbi laoreet purus ex, iaculis tincidunt sapien porta vitae. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla a metus at enim viverra dictum vel vel eros. Pellentesque ultrices mauris ligula, sit amet efficitur libero commodo eget. Vivamus eros quam, consectetur condimentum placerat id, ultricies nec neque. Cras bibendum ex faucibus sapien sagittis condimentum. Morbi non lectus quis velit commodo lacinia. Cras magna lectus, fringilla id commodo quis, vestibulum in leo. Donec posuere, lorem vitae iaculis luctus, elit libero suscipit purus, ut faucibus nisi leo et tortor. Praesent laoreet tortor ex, et euismod nulla ultricies eu. Nam at velit imperdiet, tincidunt ligula faucibus, malesuada justo.</p>
 
+          <div class="c-tab _c-tab--flex-tabs _c-tab--equal-width-tabs">
+            <input id="c-tab-1-1" class="c-tab__input" name="c-tab-1" type="radio" checked="checked">
+            <input id="c-tab-1-2" class="c-tab__input" name="c-tab-1" type="radio">
+            <input id="c-tab-1-3" class="c-tab__input" name="c-tab-1" type="radio">
+
+            <div class="c-tab__labels">
+              <label for="c-tab-1-1" class="c-tab__label">Tab 1</label>
+              <label for="c-tab-1-2" class="c-tab__label">Tab 2</label>
+              <label for="c-tab-1-3" class="c-tab__label">Tab 3</label>
+            </div>
+
+            <div class="c-tab__items">
+              <div class="c-tab__item">
+                <p>Vestibulum fermentum ipsum eget lectus vulputate, ut sodales velit auctor. Donec vel justo arcu. Morbi interdum nisi quis ipsum scelerisque egestas. Vivamus quis lorem fermentum, suscipit eros at, tempus ligula. Integer non vulputate nibh. In hac habitasse platea dictumst. Aliquam quis lacinia ex.</p>
+              </div>
+              <div class="c-tab__item">
+                <p>Vivamus pretium nunc magna, sit amet imperdiet felis elementum non. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin leo lectus, auctor vitae rutrum vitae, iaculis eleifend justo. Suspendisse sodales eleifend leo. Phasellus ex tellus, convallis sed luctus a, tempus aliquam velit. Sed nec velit felis. In eu mi at erat dictum finibus. Fusce vel dolor massa. Proin congue eget nunc at rutrum. Aliquam pulvinar molestie bibendum. Duis malesuada metus vitae nulla pulvinar vestibulum.</p>
+              </div>
+              <div class="c-tab__item">
+                <p>Cras nec diam vel libero consectetur tincidunt. Aenean aliquam quis eros viverra elementum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque auctor lobortis felis lobortis suscipit. Vestibulum volutpat aliquam elit, in tincidunt quam eleifend ut. Maecenas finibus lacus sed semper molestie. Proin varius tortor eros, vitae elementum risus semper eget. Proin eu ornare diam, vitae laoreet tortor. Sed est ante, sagittis ac venenatis ac, mollis nec dolor. In convallis placerat erat, sodales rutrum est ornare mattis. Donec venenatis urna est, nec elementum justo convallis id.</p>
+              </div>
+            </div>
+          </div>
+
+          <p>Cras semper erat ut blandit fermentum. Integer sit amet neque lorem. Cras ex nisi, dictum sit amet iaculis ac, feugiat vitae justo. In mattis finibus neque eget blandit. Morbi ultricies pharetra elit, eget semper augue auctor eget. In at tortor odio. Fusce quis mi cursus, rhoncus lectus vel, tristique sapien. Phasellus ornare ac purus non ullamcorper. Mauris ut lacus elementum, egestas tellus in, molestie est. Sed eu felis justo. Aenean id velit iaculis massa tempus semper eget vitae risus.</p>
+
+          <div class="c-tab _c-tab--flex-tabs _c-tab--equal-width-tabs">
+            <input id="c-tab-2-1" class="c-tab__input" name="c-tab-2" type="radio" checked="checked">
+            <input id="c-tab-2-2" class="c-tab__input" name="c-tab-2" type="radio">
+            <input id="c-tab-2-3" class="c-tab__input" name="c-tab-2" type="radio">
+
+            <div class="c-tab__labels">
+              <label for="c-tab-2-1" class="c-tab__label">Tab 1</label>
+              <label for="c-tab-2-2" class="c-tab__label">Tab 2</label>
+              <label for="c-tab-2-3" class="c-tab__label">Tab 3</label>
+            </div>
+
+            <div class="c-tab__items">
+              <div class="c-tab__item">
+                <p>Phasellus ultrices ullamcorper dui, eu vehicula nisi lacinia at. Fusce tempor turpis ut porta suscipit. Morbi consequat, metus sed vestibulum tempor, augue erat pharetra libero, sed vulputate velit risus sit amet purus. Nunc vel lectus eu velit bibendum convallis. Maecenas auctor lacinia ipsum, aliquam finibus augue laoreet nec. Pellentesque venenatis tempor lacus, quis lacinia orci convallis vitae. Donec vel libero non mauris auctor mattis. Etiam in convallis elit. Nam libero arcu, euismod id rutrum quis, sollicitudin vel dolor. Aliquam sem velit, faucibus et neque nec, sollicitudin pulvinar dolor. Sed et massa ac quam eleifend convallis facilisis sit amet enim. Pellentesque scelerisque porttitor ligula, sit amet consectetur sapien cursus a.</p>
+                <p>Morbi laoreet purus ex, iaculis tincidunt sapien porta vitae. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla a metus at enim viverra dictum vel vel eros. Pellentesque ultrices mauris ligula, sit amet efficitur libero commodo eget. Vivamus eros quam, consectetur condimentum placerat id, ultricies nec neque. Cras bibendum ex faucibus sapien sagittis condimentum. Morbi non lectus quis velit commodo lacinia. Cras magna lectus, fringilla id commodo quis, vestibulum in leo. Donec posuere, lorem vitae iaculis luctus, elit libero suscipit purus, ut faucibus nisi leo et tortor. Praesent laoreet tortor ex, et euismod nulla ultricies eu. Nam at velit imperdiet, tincidunt ligula faucibus, malesuada justo.</p>
+              </div>
+              <div class="c-tab__item">
+                <p>Proin pellentesque venenatis massa, at varius erat tempor at. In ultricies id risus eget pulvinar. Donec in placerat libero. Vestibulum blandit in magna mollis tincidunt. Ut porta, ipsum nec mattis molestie, neque quam scelerisque ante, nec sodales quam purus a urna. Ut a tempus tortor, a convallis erat. Fusce a lorem ligula. Suspendisse interdum dolor vel gravida elementum. Nam scelerisque sapien facilisis diam maximus, ut tempus nisi ullamcorper. Curabitur eu mi ac mauris tristique scelerisque. Fusce dictum tortor sit amet tellus eleifend, quis vehicula justo imperdiet. Suspendisse ultricies dolor id metus congue, hendrerit elementum urna vestibulum. Donec auctor lacinia tellus in tristique.</p>
+                <p>Cras semper erat ut blandit fermentum. Integer sit amet neque lorem. Cras ex nisi, dictum sit amet iaculis ac, feugiat vitae justo. In mattis finibus neque eget blandit. Morbi ultricies pharetra elit, eget semper augue auctor eget. In at tortor odio. Fusce quis mi cursus, rhoncus lectus vel, tristique sapien. Phasellus ornare ac purus non ullamcorper. Mauris ut lacus elementum, egestas tellus in, molestie est. Sed eu felis justo. Aenean id velit iaculis massa tempus semper eget vitae risus.</p>
+              </div>
+              <div class="c-tab__item">
+                <p>Ut sed nulla sodales, vestibulum tellus et, interdum lorem. Nullam fringilla dictum ex in laoreet. Phasellus id sodales neque, sit amet tristique libero. Curabitur vulputate rhoncus vestibulum. Donec placerat elit ex. Donec ac tortor sit amet purus porta hendrerit quis vel purus. In finibus rhoncus arcu, eu auctor ante consectetur at. Sed pulvinar purus quis accumsan vulputate. Suspendisse aliquet purus faucibus metus sagittis dignissim vitae quis nisi. Sed velit magna, lacinia sed felis eu, pulvinar sodales odio. Sed molestie sapien vitae posuere convallis. Sed semper ante eu tellus hendrerit ullamcorper. Quisque nulla justo, egestas non dui vel, lobortis sollicitudin turpis.</p>
+                <p>Integer congue ut elit varius eleifend. Cras finibus, ipsum pulvinar feugiat commodo, ex purus tempor erat, et lobortis diam odio quis velit. Vivamus fermentum molestie quam, non consequat nibh elementum quis. Donec vel mollis dui. Integer sed feugiat lacus. Sed fermentum vulputate sem ut tincidunt. Phasellus venenatis sagittis velit, at convallis odio tincidunt eu. Mauris nec ipsum ac erat scelerisque auctor. Sed vel eros ex.</p>
+              </div>
+            </div>
+          </div>
+
+          <p>Nam volutpat tellus in pretium lobortis. Nam eget lacinia tellus, eu feugiat quam. Maecenas eget finibus nisl. Vestibulum laoreet egestas libero quis mollis. Nam sit amet sagittis risus. Nulla congue volutpat est et eleifend. Vestibulum mattis augue eu odio rhoncus posuere. Phasellus sed magna ac ligula euismod rutrum. Sed nec erat efficitur, auctor nisi quis, tincidunt mi. Aliquam sit amet iaculis sem. Maecenas pulvinar est sem, nec cursus tellus ultricies at. Sed imperdiet dolor ex, vitae rutrum neque aliquet at.</p>
+
+          <div class="c-tab _c-tab--flex-tabs _c-tab--equal-width-tabs">
+            <input id="c-tab-3-1" class="c-tab__input" name="c-tab-3" type="radio" checked="checked">
+            <input id="c-tab-3-2" class="c-tab__input" name="c-tab-3" type="radio">
+            <input id="c-tab-3-3" class="c-tab__input" name="c-tab-3" type="radio">
+
+            <div class="c-tab__labels">
+              <label for="c-tab-3-1" class="c-tab__label">Tab 1</label>
+              <label for="c-tab-3-2" class="c-tab__label">Tab 2</label>
+              <label for="c-tab-3-3" class="c-tab__label">Tab 3</label>
+            </div>
+
+            <div class="c-tab__items">
+              <div class="c-tab__item">
+                <p>Ut suscipit dui eu fringilla gravida. Phasellus sollicitudin consectetur lacus, a luctus ex iaculis vel. Integer non fringilla augue. Sed accumsan arcu ac arcu maximus tristique. Quisque vitae massa eu elit tristique tincidunt non a nisi. Nulla porta tempor quam, eget vehicula lectus venenatis id. Nulla eget euismod augue.</p>
+                <p>Nam volutpat tellus in pretium lobortis. Nam eget lacinia tellus, eu feugiat quam. Maecenas eget finibus nisl. Vestibulum laoreet egestas libero quis mollis. Nam sit amet sagittis risus. Nulla congue volutpat est et eleifend. Vestibulum mattis augue eu odio rhoncus posuere. Phasellus sed magna ac ligula euismod rutrum. Sed nec erat efficitur, auctor nisi quis, tincidunt mi. Aliquam sit amet iaculis sem. Maecenas pulvinar est sem, nec cursus tellus ultricies at. Sed imperdiet dolor ex, vitae rutrum neque aliquet at.</p>
+              </div>
+              <div class="c-tab__item">
+                <p>Maecenas ex est, pharetra eu nisi porta, malesuada euismod ex. Cras euismod sapien felis, vel imperdiet orci congue in. Aenean leo ipsum, mollis sit amet diam non, viverra elementum nulla. Mauris quis euismod dui, ac eleifend turpis. Donec placerat ac nisi id commodo. Sed congue nunc et consectetur vestibulum. Aliquam vel porttitor libero, vel porttitor metus. Nullam id euismod massa. Donec sem nunc, congue quis quam eget, pellentesque gravida metus. Cras accumsan placerat augue eu gravida. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Fusce maximus ultricies posuere. Phasellus sed est a felis semper euismod. Praesent vel vulputate mi, ac dapibus purus.</p>
+              </div>
+              <div class="c-tab__item">
+                <p>Aliquam et fringilla lacus. Nam lobortis ante ante, sed dictum nisi egestas auctor. Maecenas in vulputate odio. Etiam sed consectetur est. Proin ut laoreet nisi, non suscipit nisl. Donec pellentesque odio ornare lobortis porttitor. Morbi ut lacus aliquam, porttitor turpis eget, laoreet velit. Aenean massa enim, hendrerit id elit quis, posuere posuere tortor.</p>
+              </div>
+            </div>
+          </div>
         </div>
 
         <div class="c-popup__footer">
