--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="./css/technical-styles.css">
 </head>
 <body>
-  <p>Repo: <a href="https://influsion.github.io/small-html-css-developments">https://influsion.github.io/small-html-css-developments</a></p>
+  <!-- <p>Repo: <a href="https://influsion.github.io/small-html-css-developments">https://influsion.github.io/small-html-css-developments</a></p> -->
 
   <ol>
     <li><a href="./c-input.html">c-input</a></li>
