update c-popup component

--- a/src/html/c-popup.html
+++ b/src/html/c-popup.html
@@ -42,8 +42,8 @@
   <div class="c-popup _c-popup--external-scroll">
     <input class="c-popup__input" type="checkbox" name="c-popup" id="c-popup-1">
 
-    <div class="c-popup__self">
-      <div class="c-popup__container">
+    <div class="c-popup__container">
+      <div class="c-popup__inner">
         <label for="c-popup-1" class="c-popup__overlay"></label>
 
         <div class="c-popup__body">
@@ -60,7 +60,7 @@
             </label>
           </div>
 
-          <div class="c-popup__inner">
+          <div class="c-popup__main">
             <p>Morbi laoreet purus ex, iaculis tincidunt sapien porta vitae. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla a metus at enim viverra dictum vel vel eros. Pellentesque ultrices mauris ligula, sit amet efficitur libero commodo eget. Vivamus eros quam, consectetur condimentum placerat id, ultricies nec neque. Cras bibendum ex faucibus sapien sagittis condimentum. Morbi non lectus quis velit commodo lacinia. Cras magna lectus, fringilla id commodo quis, vestibulum in leo. Donec posuere, lorem vitae iaculis luctus, elit libero suscipit purus, ut faucibus nisi leo et tortor. Praesent laoreet tortor ex, et euismod nulla ultricies eu. Nam at velit imperdiet, tincidunt ligula faucibus, malesuada justo.</p>
 
             <div class="c-tab _c-tab--flex-tabs _c-tab--equal-width-tabs">
@@ -155,8 +155,8 @@
   <div class="c-popup c-popup--external-scroll">
     <input class="c-popup__input" type="checkbox" name="c-popup" id="c-popup-2">
 
-    <div class="c-popup__self">
-      <div class="c-popup__container">
+    <div class="c-popup__container">
+      <div class="c-popup__inner">
         <label for="c-popup-2" class="c-popup__overlay"></label>
 
         <div class="c-popup__body">
@@ -173,7 +173,7 @@
             </label>
           </div>
 
-          <div class="c-popup__inner">
+          <div class="c-popup__main">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sollicitudin, nisi ac sodales vestibulum, ipsum ex tempus ex, non consectetur elit mi in leo. Duis eget mauris at erat ultricies porttitor. Duis hendrerit sed tellus at scelerisque. Vestibulum in ligula ut lectus accumsan rutrum. Donec feugiat, ipsum eu facilisis volutpat, velit quam finibus mi, eu faucibus nulla mi quis mauris. Suspendisse scelerisque vitae leo dignissim porttitor. Integer et malesuada sapien, eu elementum sapien. Sed consectetur neque nec sem hendrerit interdum. Nunc sit amet sollicitudin arcu, non feugiat libero. Nulla nec maximus nibh.</p>
             <p>Morbi fringilla nisl erat, quis sodales lectus malesuada in. Cras euismod dignissim justo ac egestas. Nulla facilisi. Sed dictum sed tortor eu tempor. Sed porta pulvinar metus vitae semper. Proin sed enim vel justo luctus venenatis in et lorem. Pellentesque auctor porta leo lacinia euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
             <p>Donec ac ultrices sem. Quisque eget volutpat tortor. Suspendisse nisi massa, blandit vitae nisl quis, ornare posuere ex. Aliquam vehicula augue dolor, vel auctor leo dictum non. Vestibulum ultrices ac eros vel vehicula. Proin pellentesque ornare dolor, et pharetra velit lobortis ut. Vestibulum felis leo, iaculis euismod euismod non, bibendum sit amet nunc.</p>
