--- a/src/html/c-modal.html
+++ b/src/html/c-modal.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>c-popup</title>
+  <title>c-modal</title>
   <link rel="stylesheet" href="./css/styles.css">
   <link rel="stylesheet" href="./css/technical-styles.css">
 </head>
 <body class="l-body">
-  <label for="c-popup-1"><b>Open popup 1</b></label>, <label for="c-popup-2"><b>Open popup 2</b></label>
+  <label for="c-modal-1"><b>Open modal 1</b></label>, <label for="c-modal-2"><b>Open modal 2</b></label>
   <div class="test">
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sollicitudin, nisi ac sodales vestibulum, ipsum ex tempus ex, non consectetur elit mi in leo. Duis eget mauris at erat ultricies porttitor. Duis hendrerit sed tellus at scelerisque. Vestibulum in ligula ut lectus accumsan rutrum. Donec feugiat, ipsum eu facilisis volutpat, velit quam finibus mi, eu faucibus nulla mi quis mauris. Suspendisse scelerisque vitae leo dignissim porttitor. Integer et malesuada sapien, eu elementum sapien. Sed consectetur neque nec sem hendrerit interdum. Nunc sit amet sollicitudin arcu, non feugiat libero. Nulla nec maximus nibh.</p>
     <p>Morbi fringilla nisl erat, quis sodales lectus malesuada in. Cras euismod dignissim justo ac egestas. Nulla facilisi. Sed dictum sed tortor eu tempor. Sed porta pulvinar metus vitae semper. Proin sed enim vel justo luctus venenatis in et lorem. Pellentesque auctor porta leo lacinia euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
@@ -39,20 +39,20 @@
     <p>Phasellus tincidunt nisi id velit consectetur, id luctus quam accumsan. In efficitur elit in molestie lacinia. Ut placerat urna eget erat pulvinar, vitae finibus nulla ultricies. Fusce a laoreet velit, eu tristique quam. Ut id arcu viverra, auctor quam quis, molestie nunc. Praesent ullamcorper mauris odio. Praesent leo risus, elementum vel eleifend blandit, iaculis quis justo. Fusce nec metus metus. Nulla id scelerisque neque. Phasellus ultrices lobortis elit quis iaculis. In vitae dolor diam.</p>
   </div>
 
-  <div class="c-popup _c-popup--external-scroll">
-    <input class="c-popup__input" type="checkbox" name="c-popup" id="c-popup-1">
+  <div class="c-modal _c-modal--external-scroll">
+    <input class="c-modal__input" type="checkbox" name="c-modal" id="c-modal-1">
 
-    <div class="c-popup__container">
-      <div class="c-popup__inner">
-        <label for="c-popup-1" class="c-popup__overlay"></label>
+    <div class="c-modal__container">
+      <div class="c-modal__inner">
+        <label for="c-modal-1" class="c-modal__overlay"></label>
 
-        <div class="c-popup__body">
-          <div class="c-popup__header">
-            <div class="c-popup__title">
+        <div class="c-modal__body">
+          <div class="c-modal__header">
+            <div class="c-modal__title">
               Some Title
             </div>
 
-            <label for="c-popup-1" class="c-popup__close">
+            <label for="c-modal-1" class="c-modal__close">
               <?xml version="1.0" encoding="iso-8859-1"?>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 357 357">
                 <path d="M357 35.7L321.3 0 178.5 142.8 35.7 0 0 35.7l142.8 142.8L0 321.3 35.7 357l142.8-142.8L321.3 357l35.7-35.7-142.8-142.8z"/>
@@ -60,7 +60,7 @@
             </label>
           </div>
 
-          <div class="c-popup__main">
+          <div class="c-modal__main">
             <p>Morbi laoreet purus ex, iaculis tincidunt sapien porta vitae. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla a metus at enim viverra dictum vel vel eros. Pellentesque ultrices mauris ligula, sit amet efficitur libero commodo eget. Vivamus eros quam, consectetur condimentum placerat id, ultricies nec neque. Cras bibendum ex faucibus sapien sagittis condimentum. Morbi non lectus quis velit commodo lacinia. Cras magna lectus, fringilla id commodo quis, vestibulum in leo. Donec posuere, lorem vitae iaculis luctus, elit libero suscipit purus, ut faucibus nisi leo et tortor. Praesent laoreet tortor ex, et euismod nulla ultricies eu. Nam at velit imperdiet, tincidunt ligula faucibus, malesuada justo.</p>
 
             <div class="c-tab _c-tab--flex-tabs _c-tab--equal-width-tabs">
@@ -144,7 +144,7 @@
             </div>
           </div>
 
-          <div class="c-popup__footer">
+          <div class="c-modal__footer">
             Footer
           </div>
         </div>
@@ -152,20 +152,20 @@
     </div>
   </div>
 
-  <div class="c-popup c-popup--external-scroll">
-    <input class="c-popup__input" type="checkbox" name="c-popup" id="c-popup-2">
+  <div class="c-modal c-modal--external-scroll">
+    <input class="c-modal__input" type="checkbox" name="c-modal" id="c-modal-2">
 
-    <div class="c-popup__container">
-      <div class="c-popup__inner">
-        <label for="c-popup-2" class="c-popup__overlay"></label>
+    <div class="c-modal__container">
+      <div class="c-modal__inner">
+        <label for="c-modal-2" class="c-modal__overlay"></label>
 
-        <div class="c-popup__body">
-          <div class="c-popup__header">
-            <div class="c-popup__title">
+        <div class="c-modal__body">
+          <div class="c-modal__header">
+            <div class="c-modal__title">
               Some Title
             </div>
 
-            <label for="c-popup-2" class="c-popup__close">
+            <label for="c-modal-2" class="c-modal__close">
               <?xml version="1.0" encoding="iso-8859-1"?>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 357 357">
                 <path d="M357 35.7L321.3 0 178.5 142.8 35.7 0 0 35.7l142.8 142.8L0 321.3 35.7 357l142.8-142.8L321.3 357l35.7-35.7-142.8-142.8z"/>
@@ -173,7 +173,7 @@
             </label>
           </div>
 
-          <div class="c-popup__main">
+          <div class="c-modal__main">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sollicitudin, nisi ac sodales vestibulum, ipsum ex tempus ex, non consectetur elit mi in leo. Duis eget mauris at erat ultricies porttitor. Duis hendrerit sed tellus at scelerisque. Vestibulum in ligula ut lectus accumsan rutrum. Donec feugiat, ipsum eu facilisis volutpat, velit quam finibus mi, eu faucibus nulla mi quis mauris. Suspendisse scelerisque vitae leo dignissim porttitor. Integer et malesuada sapien, eu elementum sapien. Sed consectetur neque nec sem hendrerit interdum. Nunc sit amet sollicitudin arcu, non feugiat libero. Nulla nec maximus nibh.</p>
             <p>Morbi fringilla nisl erat, quis sodales lectus malesuada in. Cras euismod dignissim justo ac egestas. Nulla facilisi. Sed dictum sed tortor eu tempor. Sed porta pulvinar metus vitae semper. Proin sed enim vel justo luctus venenatis in et lorem. Pellentesque auctor porta leo lacinia euismod. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
             <p>Donec ac ultrices sem. Quisque eget volutpat tortor. Suspendisse nisi massa, blandit vitae nisl quis, ornare posuere ex. Aliquam vehicula augue dolor, vel auctor leo dictum non. Vestibulum ultrices ac eros vel vehicula. Proin pellentesque ornare dolor, et pharetra velit lobortis ut. Vestibulum felis leo, iaculis euismod euismod non, bibendum sit amet nunc.</p>
@@ -190,7 +190,7 @@
             <p>Phasellus vel venenatis purus. In non magna est. Vivamus vel dolor sapien. Pellentesque placerat, velit id venenatis feugiat, nisi mauris egestas lacus, ac placerat sapien dui at diam. Etiam id viverra lectus, ac porttitor tortor. Fusce bibendum quam ex, eget lacinia risus tempor sit amet. Aliquam iaculis sem neque, placerat egestas libero mollis nec. Vestibulum rhoncus ligula sed ornare bibendum. Curabitur ut ullamcorper ante, ut vehicula magna. Suspendisse eu felis viverra, gravida urna sit amet, vehicula sem.</p>
           </div>
 
-          <div class="c-popup__footer">
+          <div class="c-modal__footer">
             Footer
           </div>
         </div>
