--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <ol>
     <li><a href="./c-input.html">c-input</a></li>
     <li><a href="./c-tab.html">c-tab</a></li>
-    <li><a href="./c-popup.html">c-popup</a></li>
+    <li><a href="./c-modal.html">c-modal</a></li>
   </ol>
 
 </body>
